--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -31,9 +31,9 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <form action="/mountain/address" method="post"><a class="dropdown-item" type="submit" name="searchWord">서울</a></form>
-                        <a class="dropdown-item" href="/mountain/경기">경기도</a>
-                        <a class="dropdown-item" href="/mountain/인천">인천</a>
+                        <a class="dropdown-item" href="/mountain?add=<%= URLEncoder.encode("서울", "UTF-8")%>">서울</a>
+                        <a class="dropdown-item" href="/mountain/add=<%= URLEncoder.encode("경기", "UTF-8")%>">경기도</a>
+                        <a class="dropdown-item" href="/mountain/add=<%= URLEncoder.encode("인천", "UTF-8")%>">인천</a>
                         <a class="dropdown-item" href="/mountain/강원">강원도</a>
                         <a class="dropdown-item" href="/mountain/충청">충청도</a>
                         <a class="dropdown-item" href="/mountain/대전">대전</a>
