--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -31,19 +31,19 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/mountain?add=<%= URLEncoder.encode("서울", "UTF-8")%>">서울</a>
-                        <a class="dropdown-item" href="/mountain/add=<%= URLEncoder.encode("경기", "UTF-8")%>">경기도</a>
-                        <a class="dropdown-item" href="/mountain/add=<%= URLEncoder.encode("인천", "UTF-8")%>">인천</a>
-                        <a class="dropdown-item" href="/mountain/강원">강원도</a>
-                        <a class="dropdown-item" href="/mountain/충청">충청도</a>
-                        <a class="dropdown-item" href="/mountain/대전">대전</a>
-                        <a class="dropdown-item" href="/mountain/전라">전라도</a>
-                        <a class="dropdown-item" href="/mountain/광주">광주</a>
-                        <a class="dropdown-item" href="/mountain/경상">경상도</a>
-                        <a class="dropdown-item" href="/mountain/대구">대구</a>
-                        <a class="dropdown-item" href="/mountain/울산">울산</a>
-                        <a class="dropdown-item" href="/mountain/부산">부산</a>
-                        <a class="dropdown-item" href="/mountain/제주">제주도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=seoul">서울</a>
+                        <a class="dropdown-item" href="/mountain/region?add=gyeonggi">경기도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=incheon">인천</a>
+                        <a class="dropdown-item" href="/mountain/region?add=gangwon">강원도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=chungcheong">충청도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=daejeon">대전</a>
+                        <a class="dropdown-item" href="/mountain/region?add=jeolla">전라도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=gwangju">광주</a>
+                        <a class="dropdown-item" href="/mountain/region?add=gyeongsang">경상도</a>
+                        <a class="dropdown-item" href="/mountain/region?add=daegu">대구</a>
+                        <a class="dropdown-item" href="/mountain/region?add=ulsan">울산</a>
+                        <a class="dropdown-item" href="/mountain/region?add=pusan">부산</a>
+                        <a class="dropdown-item" href="/mountain/region?add=jeju">제주도</a>
                     </div>
                 </div>
                 <div class="dropdown hard">
