--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -31,19 +31,19 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/mountain/region?add=seoul">서울</a>
-                        <a class="dropdown-item" href="/mountain/region?add=gyeonggi">경기도</a>
-                        <a class="dropdown-item" href="/mountain/region?add=incheon">인천</a>
-                        <a class="dropdown-item" href="/mountain/region?add=gangwon">강원도</a>
-                        <a class="dropdown-item" href="/mountain/region?add=chungcheong">충청도</a>
-                        <a class="dropdown-item" href="/mountain/region?add=daejeon">대전</a>
-                        <a class="dropdown-item" href="/mountain/region?add=jeolla">전라도</a>
-                        <a class="dropdown-item" href="/mountain/region?add=gwangju">광주</a>
-                        <a class="dropdown-item" href="/mountain/region?add=gyeongsang">경상도</a>
-                        <a class="dropdown-item" href="/mountain/region?add=daegu">대구</a>
-                        <a class="dropdown-item" href="/mountain/region?add=ulsan">울산</a>
-                        <a class="dropdown-item" href="/mountain/region?add=pusan">부산</a>
-                        <a class="dropdown-item" href="/mountain/region?add=jeju">제주도</a>
+                        <a class="dropdown-item" href="/mountain/seoul">서울</a>
+                        <a class="dropdown-item" href="/mountain/gyeonggi">경기도</a>
+                        <a class="dropdown-item" href="/mountain/incheon">인천</a>
+                        <a class="dropdown-item" href="/mountain/gangwon">강원도</a>
+                        <a class="dropdown-item" href="/mountain/chungcheong">충청도</a>
+                        <a class="dropdown-item" href="/mountain/daejeon">대전</a>
+                        <a class="dropdown-item" href="/mountain/jeolla">전라도</a>
+                        <a class="dropdown-item" href="/mountain/gwangju">광주</a>
+                        <a class="dropdown-item" href="/mountain/gyeongsang">경상도</a>
+                        <a class="dropdown-item" href="/mountain/daegu">대구</a>
+                        <a class="dropdown-item" href="/mountain/ulsan">울산</a>
+                        <a class="dropdown-item" href="/mountain/pusan">부산</a>
+                        <a class="dropdown-item" href="/mountain/jeju">제주도</a>
                     </div>
                 </div>
                 <div class="dropdown hard">
