--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -42,7 +42,7 @@
                         <a class="dropdown-item" href="/mountain/gyeongsang">경상도</a>
                         <a class="dropdown-item" href="/mountain/daegu">대구</a>
                         <a class="dropdown-item" href="/mountain/ulsan">울산</a>
-                        <a class="dropdown-item" href="/mountain/pusan">부산</a>
+                        <a class="dropdown-item" href="/mountain/busan">부산</a>
                         <a class="dropdown-item" href="/mountain/jeju">제주도</a>
                     </div>
                 </div>
