--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,18 +31,18 @@
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./mountain">산</a>
+                            <a class="nav-link" href="/mountain">산</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./around">주변정보</a>
+                            <a class="nav-link" href="/around">주변정보</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./community">커뮤니티</a>
+                            <a class="nav-link" href="/community">커뮤니티</a>
                         </li>
                     </ul>
                     <ul class="nav">
-                        <li class="nav-item"><a href="./signIn" class="nav-link link-light px-2">로그인</a></li>
-                        <li class="nav-item"><a href="./signUp" class="nav-link link-light px-2">회원가입</a></li>
+                        <li class="nav-item"><a href="/signIn" class="nav-link link-light px-2">로그인</a></li>
+                        <li class="nav-item"><a href="/signUp" class="nav-link link-light px-2">회원가입</a></li>
                         <!-- 로그인 시 나타남
                         <li class="nav-item userInfo"><%= // users.nickname %> 님</li>
                         <li class="nav-item dropdown">
