--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -49,9 +49,9 @@
                 <div class="dropdown hard">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">난이도</button>
                     <div class="dropdown-menu">
-                        <form action="/mountain/difficulty" method="post"><a class="dropdown-item" type="submit" name="difficulty">상</a></form>
-                        <a class="dropdown-item" href="/mountain/difficulty/중">중</a>
-                        <a class="dropdown-item" href="/mountain/difficulty/하">하</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/high">상</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/mid">중</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/low">하</a>
                     </div>
                 </div>
             </div>
