--- a/views/around.ejs
+++ b/views/around.ejs
@@ -32,19 +32,19 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/around/서울">서울</a>
-                        <a class="dropdown-item" href="/around/경기">경기도</a>
-                        <a class="dropdown-item" href="/around/인천">인천</a>
-                        <a class="dropdown-item" href="/around/강원">강원도</a>
-                        <a class="dropdown-item" href="/around/충청">충청도</a>
-                        <a class="dropdown-item" href="/around/대전">대전</a>
-                        <a class="dropdown-item" href="/around/전라">전라도</a>
-                        <a class="dropdown-item" href="/around/광주">광주</a>
-                        <a class="dropdown-item" href="/around/경상">경상도</a>
-                        <a class="dropdown-item" href="/around/대구">대구</a>
-                        <a class="dropdown-item" href="/around/울산">울산</a>
-                        <a class="dropdown-item" href="/around/부산">부산</a>
-                        <a class="dropdown-item" href="/around/제주">제주도</a>
+                        <a class="dropdown-item" href="/around/seoul">서울</a>
+                        <a class="dropdown-item" href="/around/gyeonggi">경기도</a>
+                        <a class="dropdown-item" href="/around/incheon">인천</a>
+                        <a class="dropdown-item" href="/around/gangwon">강원도</a>
+                        <a class="dropdown-item" href="/around/chungcheong">충청도</a>
+                        <a class="dropdown-item" href="/around/daejeon">대전</a>
+                        <a class="dropdown-item" href="/around/jeolla">전라도</a>
+                        <a class="dropdown-item" href="/around/gwangju">광주</a>
+                        <a class="dropdown-item" href="/around/gyeongsang">경상도</a>
+                        <a class="dropdown-item" href="/around/daegu">대구</a>
+                        <a class="dropdown-item" href="/around/ulsan">울산</a>
+                        <a class="dropdown-item" href="/around/busan">부산</a>
+                        <a class="dropdown-item" href="/around/jeju">제주도</a>
                     </div>
                 </div>
                 <form method="post" action="/around">
