--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,10 +121,10 @@
                 <div class="col-xs-7 col-sm-7 col-md-4 col-lg-4 p-3">
                     <div class="card p-3 shadow text-center border-0">
                         <div class="card-body">
-                            <a href="/search">
+                            <a href="/mountain">
                                 <img src="/images/mountain.png" width=100px>
                                 <hr />
-                                <h2 class="card-title display-1" style="font-size:3.0vmin;">산 검색</h2>
+                                <h2 class="card-title display-1" style="font-size:3.0vmin;">산</h2>
                             </a>
                         </div>
                     </div>
