--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -75,7 +75,9 @@
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/mountainInfo/<%= m.number %>">View</a></button>
                                         </div>
-                                        <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)" href="bookmark/<%= m.number %>"></i>
+                                        <form action="/bookmark/<%= m.number %>" methos="post">
+                                            <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)"></i>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
