--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -75,7 +75,7 @@
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/mountainInfo/<%= m.number %>">View</a></button>
                                         </div>
-                                        <form action="/bookmark/<%= m.number %>" methos="get">
+                                        <form action="/bookmark/<%= m.number %>/create" methos="post">
                                             <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)" type="submit"></i>
                                         </form>
                                     </div>
