--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -62,7 +62,9 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <!-- <img src="" alt="" /> -->
+                                    <% const img = require('../controllers/imgController'); %>
+                                    <% const imgObject = img.getImage(m.number); %>
+                                    <img src="www.forest.go.kr/images/data/down/mountain/<%= imgObject[0] %>" alt="" />
                                     <title>Placeholder</title>
                                     <rect width="100%" height="100%" fill="#cae3cc" />
                                 </svg>
@@ -75,9 +77,25 @@
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/mountainInfo/<%= m.number %>">View</a></button>
                                         </div>
-                                        <form action="/bookmark/<%= m.number %>/create" methos="post">
-                                            <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)" type="submit"></i>
-                                        </form>
+                                        <!-- user session 추가 후
+                                        <% // let i = 0 %>
+                                        <% // bookmarks.forEach(b => { %>
+                                            <% // if (b.number == m.number) { %>
+                                                <% // i = 1 %>
+                                            <% // }}) %>
+                                        <% // if (i == 0) { %>
+                                            <form action="/bookmark/<%= // m.number %>/create" method="post"></form>
+                                                <i class="fa-regular fa-heart" id="<%= // m.number %>" onclick="switchHeart(this.id)" type="submit"></i>
+                                            </form>
+                                        <% // } %> 
+                                        <% // else if (i == 1) { */ %> -->
+                                            <form action="/bookmark/<%= m.number %>/delete" method="post"></form>
+                                                <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)" type="submit"></i>
+                                            </form>
+                                            <% // const heart = document.getElementById(m.number); %>
+                                            <% // heart.classList.replace('fa-regular', 'fa-solid'); %>
+                                            <% // heart.style.color = "red"; %>
+                                        <% // }; %>
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +109,7 @@
 
 </body>
 
-<script >
+<script>
     function switchHeart(clickedId) {
         const defaultHeart = document.getElementById(clickedId);
         
