--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -76,13 +76,13 @@
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
+      <% for(int i = 0; i < 3; i++) { %>
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img class="rounded-circle" src="./img/seongmigarden.jfif" alt=""><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+        <h2><%= arounds[i].name %></h2>
 
-        <h2>성미정원</h2>
-
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <p><%= arounds[i].address %></p>
       </div><!-- /.col-lg-4 -->
+      <% } %>
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
