--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -76,13 +76,14 @@
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <% for(int i = 0; i < 3; i++) { %>
+      <% arounds.forEach(a => { %>
       <div class="col-lg-4">
-        <h2><%= arounds[i].name %></h2>
+        <h2><%= a.name %></h2>
 
-        <p><%= arounds[i].address %></p>
+        <p><%= a.address %></p>
       </div><!-- /.col-lg-4 -->
-      <% } %>
+      <% if (arounds[2] == a) break; %>
+      <% }); %>
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
