--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -88,7 +88,7 @@
                                         <% // } %> 
                                         <% // else if (i == 1) { */ %> -->
                                             <form action="/bookmark/<%= m.number %>/delete" method="post">
-                                                <input type="submit" id="<%= m.number %>" class="heartSubmit" value="&#xf004" onclick="switchHeart(this.id)" />
+                                                <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" onclick="switchHeart(this.id)" />
                                                 <!-- <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)" type="submit"></i>-->
                                             </form>
                                             <% // const heart = document.getElementById(m.number); %>
