--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -82,7 +82,7 @@
                                                 <% // i = 1 %>
                                             <% // }}) %>
                                         <% // if (i == 0) { %> -->
-                                            <form action="/bookmark/<%= m.number %>/create" method="post">
+                                            <form action="" method="post">
                                                 <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" onclick="switchHeart(this.id, 0)" />
                                             </form>
                                         <% // } %> 
