--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -30,11 +30,11 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./img/halla.jpg" alt=""><rect width="100%" height="100%" fill="#777"/></svg>
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="/mountainInfo/<%= mountain.number %>/0" alt=""><rect width="100%" height="100%" fill="#777"/></svg>
 
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>한라산</h1>
+            <h1></h1>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
 
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>example</h1>
+            <h1></h1>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
         <p class="lead">주소: <%= mountain.address %></p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
           <img src="/mountainInfo/<%= mountain.number %>/0" alt="" />
         </svg>
 
@@ -130,8 +130,6 @@
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#eee"/>
           <img src="/mountainInfo/<%= mountain.number %>/1" alt="" />
         </svg>
 
