--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -30,8 +30,8 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="0%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <img src="/mountainInfo/<%= mountain.number %>/0" alt=""><rect width="100%" height="100%" fill="#777"/>
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <image src="/mountainInfo/<%= mountain.number %>/0" alt="">
         </svg>
 
         <div class="container">
@@ -41,7 +41,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./img/halla2.jpg" alt=""><rect width="100%" height="100%" fill="#777"/></svg>
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <image src="/mountainInfo/<%= mountain.number %>/1" alt="">
+          </svg>
 
         <div class="container">
           <div class="carousel-caption">
@@ -50,7 +52,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./img/halla3.jpg" alt=""><rect width="100%" height="100%" fill="#777"/></svg>
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <image src="/mountainInfo/<%= mountain.number %>/2" alt="">
+          </svg>
 
         <div class="container">
           <div class="carousel-caption text-end">
@@ -99,7 +103,8 @@
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <img src="/mountainInfo/<%= mountain.number %>/0" alt="" />
+          <rect width="100%" height="100%" fill="#eee"/>
+          <image src="/mountainInfo/<%= mountain.number %>/0" alt="" />
         </svg>
 
       </div>
@@ -132,7 +137,9 @@
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <img src="/mountainInfo/<%= mountain.number %>/1" alt="" />
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#eee"/>
+          <image src="/mountainInfo/<%= mountain.number %>/1" alt="" />
         </svg>
 
       </div>
