--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -62,7 +62,7 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <image src="/mountain/image/<%= m.number %>" alt="" />
+                                    <image href="/mountain/image/<%= m.number %>" alt="" />
                                 </svg>
     
                                 <div class="card-body">
