--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -31,7 +31,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image src="/mountainInfo/<%= mountain.number %>/0" alt="">
+          <image href="/mountainInfo/<%= mountain.number %>/0" alt="">
         </svg>
 
         <div class="container">
@@ -42,7 +42,7 @@
       </div>
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image src="/mountainInfo/<%= mountain.number %>/1" alt="">
+          <image href="/mountainInfo/<%= mountain.number %>/1" alt="">
           </svg>
 
         <div class="container">
@@ -53,7 +53,7 @@
       </div>
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image src="/mountainInfo/<%= mountain.number %>/2" alt="">
+          <image href="/mountainInfo/<%= mountain.number %>/2" alt="">
           </svg>
 
         <div class="container">
@@ -104,7 +104,7 @@
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
           <rect width="100%" height="100%" fill="#eee"/>
-          <image src="/mountainInfo/<%= mountain.number %>/0" alt="" />
+          <image href="/mountainInfo/<%= mountain.number %>/0" alt="" />
         </svg>
 
       </div>
@@ -139,7 +139,7 @@
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#eee"/>
-          <image src="/mountainInfo/<%= mountain.number %>/1" alt="" />
+          <image href="/mountainInfo/<%= mountain.number %>/1" alt="" />
         </svg>
 
       </div>
