--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -30,13 +30,20 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="500" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image href="/mountainInfo/<%= mountain.number %>/0" alt="">
-        </svg>
+        <img src="/mountainInfo/<%= mountain.number %>/0" alt="" style="width: 100%" />
 
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1></h1>
+            <h1><%= mountain.name %></h1>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%" />
+
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1><%= mountain.name %></h1>
           </div>
         </div>
       </div>
