--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%" />
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%; height: 500px" />
 
         <div class="container">
           <div class="carousel-caption text-start">
