--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -30,7 +30,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/mountainInfo/<%= mountain.number %>/0" alt="" style="width: 100%" />
+        <img src="/mountainInfo/<%= mountain.number %>/0" alt="First slide" style="width: 100%" />
 
         <div class="container">
           <div class="carousel-caption text-start">
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%; height: 500px" />
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%; height: 400px" />
 
         <div class="container">
           <div class="carousel-caption text-start">
@@ -141,3 +141,9 @@
 </body>
 
 <script src="./js/bootstrap.bundle.min.js"></script>
+
+<script>
+    $('.carousel').carousel({
+      interval: 2000 //기본 5초
+    })
+</script>
