--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -30,7 +30,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/mountainInfo/<%= mountain.number %>/0" alt="First slide" style="width: 100%" />
+        <img src="/mountainInfo/<%= mountain.number %>/0" alt="First slide" style="width: 100%; height: 500px; object-fit: cover;" />
 
         <div class="container">
           <div class="carousel-caption text-start">
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%; height: 400px" />
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 100%; height: 500px; object-fit: cover;" />
 
         <div class="container">
           <div class="carousel-caption text-start">
