--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -51,10 +51,10 @@
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </a>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </a>
   </div>
 
 
@@ -143,6 +143,6 @@
 
 <script>
     $('.carousel').carousel({
-      interval: 2000 //기본 5초
+      interval: 4000 //기본 5초
     })
 </script>
