--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -87,8 +87,7 @@
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#eee"/>
-          <image href="/mountainInfo/<%= mountain.number %>/0" alt="" />
+          <image href="/mountainInfo/<%= mountain.number %>/0" alt="" style="object-fit: cover;"/>
         </svg>
 
       </div>
@@ -121,8 +120,6 @@
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#eee"/>
           <image href="/mountainInfo/<%= mountain.number %>/1" alt="" />
         </svg>
 
