--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,14 +92,14 @@
         <br />
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
-                <form class="card card-sm">
+                <form class="card card-sm" method="post" action="/search">
                     <div class="card-body row no-gutters align-items-center">
                         <div class="col-auto">
                             <i class="fas fa-search h4 text-body"></i>
                         </div>
                         <!--end of col-->
                         <div class="col">
-                            <input class="form-control form-control-lg form-control-borderless" type="search"
+                            <input class="form-control form-control-lg form-control-borderless" type="text" name="searchWord"
                                 placeholder="let's SANTAS!">
                         </div>
                         <!--end of col-->
