--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -86,7 +86,7 @@
         <p class="lead">주소: <%= mountain.address %></p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500px" height="500px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
           <image href="/mountainInfo/<%= mountain.number %>/0" alt="" style="object-fit: cover;"/>
         </svg>
 
@@ -98,7 +98,6 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading"><%= mountain.name %> <span class="text-muted"> 에 대해서.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
         <table class= "table">
             <tr>
                 <th>고도</th>
