--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -86,10 +86,7 @@
         <p class="lead">주소: <%= mountain.address %></p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image href="/mountainInfo/<%= mountain.number %>/0" alt="" style="object-fit: cover;"/>
-        </svg>
-
+          <img src="/mountainInfo/<%= mountain.number %>/0" alt="" style="width: 500px; height: 500px; object-fit: cover;"/>
       </div>
     </div>
 
@@ -118,10 +115,7 @@
         </table>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <image href="/mountainInfo/<%= mountain.number %>/1" alt="" />
-        </svg>
-
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover;"/>
       </div>
     </div>
 
