--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,12 +6,12 @@
   <div class="container-fluid" id="search">
     <div class="d-grid gap-4">
       <form class="d-flex" action="/search" method="post">
-        <input class="form-control me-2" type="text" placeholder="어디로 떠나실래요?" aria-label="search" name="searchWord">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" type="text" placeholder="어디로 떠나실래요?" aria-label="search" name="searchWord" id="saveWord">
+        <button class="btn btn-outline-success" type="submit" onclick="">Search</button>
       </form>
       <form class="d-flex" action="/search/region" method="post">
-        <input class="form-control me-2" type="text" placeholder="지역으로 찾아보세요!" aria-label="search" name="searchWord">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" type="text" placeholder="지역으로 찾아보세요!" aria-label="search" name="searchWord" id="saveWord">
+        <button class="btn btn-outline-success" type="submit" onclick="">Search</button>
       </form>
     </div>
   </div>
@@ -106,3 +106,13 @@
   }
 </script>
 
+<script>
+  let text;
+  function saveWord() {
+    text = document.getElementById("saveWord").value();
+  }
+
+  window.onload() {
+    document.getElementById("saveWord").value() = text;
+  }
+</script>
