--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -95,7 +95,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <div class="col-md-5 order-md-1">
-          <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover;"/>
+          <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover; display: inline-block;"/>
         </div>
         <h2 class="featurette-heading"><%= mountain.name %> <span class="text-muted"> 에 대해서.</span></h2>
         <table class= "table">
