--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -93,7 +93,7 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="col-md-7">
         <h2 class="featurette-heading"><%= mountain.name %> <span class="text-muted"> 에 대해서.</span></h2>
         <table class= "table">
             <tr>
@@ -113,7 +113,7 @@
                 <td><%= mountain.cableCar %></td>
             </tr>
         </table>
-        <div class="col-md-5 order-md-1">
+        <div class="col-md-5">
           <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover; padding-right: 10px;"/>
         </div>
       </div>
