--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -113,9 +113,9 @@
                 <td><%= mountain.cableCar %></td>
             </tr>
         </table>
-        <div class="col-md-5 order-md-1">
-          <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover;"/>
-        </div>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img src="/mountainInfo/<%= mountain.number %>/1" alt="" style="width: 500px; height: 500px; object-fit: cover; padding-right: 10px;"/>
       </div>
     </div>
 
